# vis17-particles-ospray

./: CMakeLists.txt  README.md
ispc-sample/: Makefile  main.cpp  sample.ispc
module_example/: CMakeLists.txt  ColormappedSpheres.cpp  ColormappedSpheres.h  ColormappedSpheres.ispc  README.md  colormapped_spheres_app.cpp  moduleInit.cpp
simple/: CMakeLists.txt  simple_particles.cpp
